Update from Forestry.io Sharon Kabel created config/_default/content/other-resources.md

--- a/config/_default/.forestry/front_matter/templates/text-heavy.yml
+++ b/config/_default/.forestry/front_matter/templates/text-heavy.yml
@@ -17,6 +17,7 @@ fields:
       format: markdown
   label: text
 pages:
+- config/_default/content/other-resources.md
 - config/_default/content/texts.md
 - config/_default/content/rubrics.md
 - config/_default/content/faqs.md
