Update from Forestry.io - Updated Forestry configuration

--- a/config/_default/.forestry/front_matter/templates/text-heavy.yml
+++ b/config/_default/.forestry/front_matter/templates/text-heavy.yml
@@ -16,6 +16,9 @@ fields:
     schema:
       format: markdown
   label: text
+- name: toggle
+  type: boolean
+  label: toggle
 pages:
 - config/_default/content/texts.md
 - config/_default/content/rubrics.md
