Update from Forestry.io Sharon Kabel created config/_default/content/the-rite-of-marriage-1.md

--- a/config/_default/.forestry/front_matter/templates/text-heavy.yml
+++ b/config/_default/.forestry/front_matter/templates/text-heavy.yml
@@ -27,3 +27,4 @@ pages:
 - config/_default/content/commentaries.md
 - config/_default/content/glossary-of-terms.md
 - config/_default/content/the-rite-of-marriage.md
+- config/_default/content/the-rite-of-marriage-1.md
