Update from Forestry.io Sharon Kabel created config/_default/content/Other Resources/customs.md

--- a/config/_default/.forestry/front_matter/templates/text-heavy.yml
+++ b/config/_default/.forestry/front_matter/templates/text-heavy.yml
@@ -21,6 +21,7 @@ fields:
   label: toggle
 pages:
 - config/_default/content/Other Resources/other-resources.md
+- config/_default/content/Other Resources/customs.md
 - config/_default/content/texts.md
 - config/_default/content/rubrics.md
 - config/_default/content/faqs.md
