Update from Forestry.io Sharon Kabel created config/_default/content/Other Resources/commentaries.md Sharon Kabel deleted config/_default/content/commentaries.md

--- a/config/_default/.forestry/front_matter/templates/text-heavy.yml
+++ b/config/_default/.forestry/front_matter/templates/text-heavy.yml
@@ -24,7 +24,7 @@ pages:
 - config/_default/content/Other Resources/glossary.md
 - config/_default/content/Other Resources/customs.md
 - config/_default/content/Other Resources/faqs.md
+- config/_default/content/Other Resources/commentaries.md
 - config/_default/content/texts.md
 - config/_default/content/rubrics.md
-- config/_default/content/commentaries.md
 - config/_default/content/the-rite-of-marriage.md
