--- a/config/_default/.forestry/front_matter/templates/template2.yml
+++ b/config/_default/.forestry/front_matter/templates/template2.yml
@@ -26,6 +26,7 @@ fields:
     required: false
   label: text area
 pages:
+- config/_default/content/Home/About.md
 - config/_default/content/Other Resources/Walkthrough.md
 - config/_default/content/About.md
 - config/_default/content/History.md
