--- a/config/_default/.forestry/front_matter/templates/text-heavy.yml
+++ b/config/_default/.forestry/front_matter/templates/text-heavy.yml
@@ -22,9 +22,9 @@ fields:
 pages:
 - config/_default/content/Other Resources/other-resources.md
 - config/_default/content/Other Resources/history.md
+- config/_default/content/Other Resources/rubrics-for-the-wedding-mass.md
 - config/_default/content/Other Resources/glossary.md
 - config/_default/content/Other Resources/customs.md
 - config/_default/content/Other Resources/faqs.md
 - config/_default/content/Other Resources/commentaries.md
 - config/_default/content/Home/home.md
-- config/_default/content/rubrics.md
