Update from Forestry.io Sharon Kabel created config/_default/content/Other Resources/traditional-catholicism.md

--- a/config/_default/.forestry/front_matter/templates/text-heavy.yml
+++ b/config/_default/.forestry/front_matter/templates/text-heavy.yml
@@ -29,5 +29,6 @@ pages:
 - config/_default/content/Other Resources/commentaries.md
 - config/_default/content/Home/home.md
 - config/_default/content/Other Resources/mass-music.md
+- config/_default/content/Other Resources/traditional-catholicism.md
 - config/_default/content/Other Resources/marriage-preparation.md
 - config/_default/content/Other Resources/other-resources.md
