--- a/config/_default/.forestry/settings.yml
+++ b/config/_default/.forestry/settings.yml
@@ -5,10 +5,10 @@ admin_path: ''
 webhook_url: 
 sections:
 - type: directory
-  path: config/_default/content
+  path: ''
   label: Pages
   create: all
-  match: "*"
+  match: "**/*"
 upload_dir: config/_default/static/uploads
 public_path: "/uploads"
 front_matter_path: ''
