Update from Forestry.io - Updated Forestry configuration

--- a/config/_default/.forestry/settings.yml
+++ b/config/_default/.forestry/settings.yml
@@ -3,13 +3,37 @@ new_page_extension: md
 auto_deploy: false
 admin_path: ''
 webhook_url: 
-sections: 
+sections:
+- type: directory
+  path: config/_default/content
+  label: Pages
+  create: all
+  match: "*"
+- type: directory
+  path: config/_default/content/The Rite of Marriage
+  label: The rite of marriage
+  create: all
+  match: "**/*"
+- type: directory
+  path: config/_default/content/Home
+  label: Home
+  create: all
+  match: "**/*"
+- type: directory
+  path: config/_default/content/The Wedding Mass
+  label: The wedding mass
+  create: all
+  match: "**/*"
+- type: directory
+  path: config/_default/content/Other Resources
+  label: Other resources
+  create: all
+  match: "**/*"
 upload_dir: config/_default/static/uploads
 public_path: "/uploads"
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
-instant_preview: true
 build:
   preview_command: hugo -E -F -D -b $DEPLOY_URL -d public
   publish_command: hugo -d public
