--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,15 +5,15 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Academic"
+title = "Latin Mass Wedding"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://latinmasswedding.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "&copy; {year} Sharon Kabel"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
