--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,8 +9,8 @@
   weight = 10
 
 [[main]]
-  name = "About"
-  url = "#about"
+  name = "Rite of Marriage"
+  url = "#Rite of Marriage"
   weight = 20
 
 [[main]]
