--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,7 +5,7 @@
 
 [[main]]
   name = "Home"
-  url = "#Home"
+  url = "#Home page"
   weight = 10
 
 [[main]]
@@ -14,8 +14,8 @@
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Wedding Mass"
+  url = "#Wedding Mass"
   weight = 30
 
 [[main]]
