--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,8 +24,8 @@
   weight = 40
 
 [[main]]
-  name = "Contact"
-  url = "#contact"
+  name = "Library"
+  url = "#Library"
   weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
