--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,22 +5,22 @@
 
 [[main]]
   name = "Home"
-  url = "Home page/"
+  url = "/"
   weight = 10
 
 [[main]]
   name = "Rite of Marriage"
-  url = "Rite of Marriage/"
+  url = "rite-of-marriage/"
   weight = 20
 
 [[main]]
   name = "Wedding Mass"
-  url = "The Wedding Mass/"
+  url = "the-wedding-mass/"
   weight = 30
 
 [[main]]
   name = "Library"
-  url = "Library/"
+  url = "library/"
   weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
