--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,7 +4,7 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
+  name = "About"
   url = "/"
   weight = 10
 
@@ -19,7 +19,7 @@
   weight = 30
 
 [[main]]
-  name = "Library"
+  name = "Resources"
   url = "library"
   weight = 50
 
