--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -21,7 +21,13 @@
 [[main]]
   name = "Resources"
   url = "resources"
-  weight = 50
+  weight = 40
+  
+[[main]]
+  name = Flowers
+  parent = "Resources"
+  url = "flowers"
+  weight = 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
