--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -89,6 +89,12 @@
   url = "resources/walkthrough"
   weight = 40  
   
+[[main]]
+  name = "Married Saints"
+  parent = "Resources"
+  url = "resources/married-saints"
+  weight = 40  
+  
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
