--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -11,6 +11,10 @@ day_night = true
 #   Choose from `default`, `classic`, or `playfair`.
 font = "classic"
 
+#post-content {
+  font-size: 14px;
+}
+
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
 description = ""
 
