add commentaries back to resources menu

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,6 +23,12 @@
   url = "resources"
   weight = 40
   
+ [[main]]
+ name = "Commentaries"
+ parent = "Resources"
+ url = "resources/commentaries"
+ weight = 40
+  
 [[main]]
   name = "FAQs"
   parent = "Resources"
