don't like that

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -115,8 +115,8 @@ reading_time = true
 comment_count = true
 
 # Display next/previous section pager? (true/false)
-section_pager = true
-docs_section_pager = true  # Display pager in Docs layout (e.g. tutorials)?
+section_pager = false
+docs_section_pager = false  # Display pager in Docs layout (e.g. tutorials)?
 
 # Enable in-built social sharing buttons? (true/false)
 sharing = true
