--- a/data/themes/default.toml
+++ b/data/themes/default.toml
@@ -4,7 +4,7 @@ name = "Test1"
 # Is theme light or dark?
 light = true
 
-# Primary
+# Primary (URL color)
 primary = "#0645AD"
 
 # Menu
@@ -15,4 +15,4 @@ menu_title = "#fff"
 
 # Home sections
 home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(247, 247, 247)"
+home_section_even = "rgb(255, 255, 230)"
