--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -11,6 +11,9 @@ day_night = true
 #   Choose from `default`, `classic`, or `playfair`.
 font = "default"
 
+# Font color.
+font_color = "#000000"
+
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
 description = "Learn about Latin Mass weddings!"
 
