added Local Customs page!!

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -66,6 +66,12 @@
   weight = 40  
   
 [[main]]
+  name = "Local Customs"
+  parent = "Resources"
+  url = "resources/local-customs"
+  weight = 40    
+  
+[[main]]
   name = "Mass Music"
   parent = "Resources"
   url = "resources/mass-music"
