--- a/data/fonts/default.toml
+++ b/data/fonts/default.toml
@@ -2,11 +2,11 @@
 name = "Roboto Slab"
 
 # Optional Google font URL
-google_fonts = "Roboto+Slab:700"
+google_fonts = "Roboto+Slab"
 
 # Font families
 heading_font = "Roboto+Slab"
-body_font = "Roboto+Slab"
+body_font = "Roboto+Slab
 nav_font = "Roboto+Slab"
 mono_font = "Roboto+Slab"
 
