add Rite of Betrothal page

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -107,6 +107,12 @@
   url = "resources/married-saints"
   weight = 40  
   
+  [[main]]
+  name = "Rite of Betrothal"
+  parent = "Resources"
+  url = "resources/rite-of-betrothal"
+  weight = 40  
+  
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
