add other rites and languages page

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -113,6 +113,12 @@
   url = "resources/rite-of-betrothal"
   weight = 40  
   
+  [[main]]
+  name = "Other Rites and Languages"
+  parent = "Resources"
+  url = "resources/other-rites-and-languages"
+  weight = 40    
+  
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
