--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -119,6 +119,11 @@
   url = "resources/other-rites-and-languages"
   weight = 40    
   
+  [[main]]
+  name = "Shop"
+  parent = "Resources"
+  url = "resources/shop"
+  weight = 40      
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
