--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -60,38 +60,11 @@
   url = "start-here/marriage-preparation"
   weight = 40  
   
-[[main]]
-  name = "More Resources"
-  url = "resources"
-  weight = 60  
-  
-[[main]]
- name = "Mass Commentaries"
- parent = "More Resources"
- url = "resources/commentaries"
- weight = 60
-  
-[[main]]
-  name = "History"
-  parent = "More Resources"
-  url = "resources/history"
-  weight = 60  
-  
-  
-  
-
-  
-[[main]]
-  name = "Local Customs"
-  parent = "Resources"
-  url = "resources/local-customs"
-  weight = 40    
-  
-[[main]]
-  name = "Mass Music"
-  parent = "Resources"
-  url = "resources/mass-music"
-  weight = 40  
+ [[main]]
+  name = "Music"
+  parent = "Start Here"
+  url = "start-here/mass-music"
+  weight = 50   
   
 [[main]]
   name = "Mass Programs"
@@ -111,35 +84,69 @@
   url = "resources/rubrics-for-the-wedding-mass"
   weight = 40  
   
-[[main]]
-  name = "Walkthrough"
-  parent = "Resources"
-  url = "resources/walkthrough"
-  weight = 40  
-  
-[[main]]
-  name = "Married Saints"
-  parent = "Resources"
-  url = "resources/married-saints"
-  weight = 40  
-  
   [[main]]
   name = "Rite of Betrothal"
   parent = "Resources"
   url = "resources/rite-of-betrothal"
   weight = 40  
   
-  [[main]]
-  name = "Other Rites and Languages"
-  parent = "Resources"
-  url = "resources/other-rites-and-languages"
-  weight = 40    
   
-  [[main]]
+  
+  
+  
+  
+  
+  
+  
+  
+  
+[[main]]
+  name = "More Resources"
+  url = "resources"
+  weight = 60  
+  
+[[main]]
+ name = "Mass Commentaries"
+ parent = "More Resources"
+ url = "resources/commentaries"
+ weight = 60
+  
+[[main]]
+  name = "History"
+  parent = "More Resources"
+  url = "resources/history"
+  weight = 60  
+  
+[[main]]
+  name = "Local Customs"
+  parent = "More Resources"
+  url = "resources/local-customs"
+  weight = 60    
+
+[[main]]
+  name = "Walkthrough"
+  parent = "More Resources"
+  url = "resources/walkthrough"
+  weight = 60  
+  
+[[main]]
+  name = "Married Saints"
+  parent = "More Resources"
+  url = "resources/married-saints"
+  weight = 60  
+
+[[main]]
+  name = "Other Rites and Languages"
+  parent = "More Resources"
+  url = "resources/other-rites-and-languages"
+  weight = 60    
+  
+[[main]]
   name = "Shop"
-  parent = "Resources"
+  parent = "More Resources"
   url = "resources/shop"
-  weight = 40      
+  weight = 60      
+  
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
